commit before migration

--- a/d3/simple_test.html
+++ b/d3/simple_test.html
@@ -91,8 +91,8 @@
             .attr("d", d3.svg.chord().radius(innerRadius));
 
     });
-
-    d3.select(self.frameElement).style("height", outerRadius * 2 + "px");
+    console.log(self.frameElement);
+    //d3.select(self.frameElement).style("height", outerRadius * 2 + "px");
 
 </script>
 </body>
