add functionnality to the Graphe trait

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
   See README.md for detailed explanations.</p>
 
 <div id="playground">
+  <svg width="240" height="240"></svg>
+</div>
+
+<div id="playground2">
   <svg width="960" height="960"></svg>
 </div>
 
