Construct a chord graph using -> and try and compute ticks

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <!--</div>-->
 
 <div id="playground2">
-  <svg width="960" height="960"></svg>
+  <svg></svg>
 </div>
 
 <script type="text/javascript" src="./target/scala-2.12/scalajs-bundler/main/example-fastopt-bundle.js"></script>
