--- a/d3/simple_test.html
+++ b/d3/simple_test.html
@@ -32,14 +32,19 @@
 
             let countries = svg.append("g");
             <!--d3.json("eu.topojson", function(data) {-->
-            d3.json("states_census_2015.json", function(data) {
-                countries.selectAll('.country')
-                    <!--.data(topojson.feature(data, data.objects.europe).features)-->
-                    .data(topojson.feature(data, data.objects.states).features)
-                    .enter()
-                    .append('path')
-                    .attr('class', 'country')
-                    .attr('d', path);
+            d3.json("europe.geo.json", function(data) {
+                let geoData = data.features
+                <!--countries.selectAll('.country')-->
+                    <!--.data(geoData)-->
+                    <!--.enter()-->
+                    <!--.append('path')-->
+                    <!--.attr('class', 'country')-->
+                    <!--.attr('d', path);-->
+                 countries.attr("id", "map")
+                    .selectAll("path")
+                    .data(geoData)
+                    .enter().append("path")
+                    .attr("d", path)
                 return;
             });
         </script>
