--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
   (using `sbt fastOptJS::webpack`), you should see some bars here below.
   See README.md for detailed explanations.</p>
 
-<!--<div id="playground">-->
-  <!--<svg width="240" height="240"></svg>-->
-<!--</div>-->
+<div id="plot1">
+  <svg width="400" height="400"></svg>
+</div>
 
 <div id="playground2">
   <svg></svg>
